--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;400;500&display=swap" rel="stylesheet" />
   </head>
+
   <body>
+    <header>
+      <div class="nav box-container">
+        <ul class="ul">
+          <li><a class="nav-btn" href="">Home</a></li>
+          <li><a class="nav-btn" href="/blog.html">Blogs</a></li>
+        </ul>
+      </div>
+    </header>
     <h1 class="title"><img src="./logo.png" /></h1>
     <div id="show-time">0 seconds</div>
 
@@ -28,7 +37,7 @@
         <h1 class="title2">History</h1>
         <div class="line"></div>
       </div>
-      <div id="histories"></div>
+      <div id="histories" class=""></div>
     </div>
 
     <div id="countdown"></div>
