--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <header>
       <div class="nav box-container">
         <ul class="ul">
-          <li><a class="nav-btn" href="">Home</a></li>
-          <li><a class="nav-btn" href="/blog.html">Blogs</a></li>
+          <li>
+            <a class="nav-btn" href="/index.html"> <span class="link-span">Home</span></a>
+          </li>
+          <li>
+            <a class="nav-btn" href="/blog.html"> <span class="link-span">Blogs</span></a>
+          </li>
         </ul>
       </div>
     </header>
