--- a/blog.html
+++ b/blog.html
@@ -16,8 +16,12 @@
     <header>
       <div class="nav box-container">
         <ul class="ul">
-          <li><a class="nav-btn" href="/index.html">Home</a></li>
-          <li><a class="nav-btn" href="/blog.html">Blogs</a></li>
+          <li>
+            <a class="nav-btn" href="/index.html"><span class="p-3">Home</span></a>
+          </li>
+          <li>
+            <a class="nav-btn" href="/blog.html"> <span class="p-3">Blogs</span></a>
+          </li>
         </ul>
       </div>
     </header>
