--- a/blog.html
+++ b/blog.html
@@ -27,9 +27,9 @@
     </header>
 
     <main class="p-4">
-      <section class="container bg-light w-5 rounded">
+      <section class="container bg-dark w-5 rounded">
         <div class="accordion" id="accordionPanelsStayOpenExample">
-          <div class="accordion-item p-2">
+          <div class="accordion-item p-2 bg-dark text-light">
             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
               <button
                 class="accordion-button"
@@ -77,7 +77,7 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item p-2">
+          <div class="accordion-item p-2 bg-dark text-light">
             <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
               <button
                 class="accordion-button collapsed"
@@ -104,7 +104,7 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item p-2">
+          <div class="accordion-item p-2 bg-dark text-light">
             <h2 class="accordion-header" id="panelsStayOpen-headingThree">
               <button
                 class="accordion-button collapsed"
