--- a/blog.html
+++ b/blog.html
@@ -26,8 +26,8 @@
       </div>
     </header>
 
-    <main class="p-4">
-      <section class="container bg-dark w-5 rounded">
+    <main class="p-5">
+      <section class="container bg-dark w-5 rounded p-3">
         <div class="accordion" id="accordionPanelsStayOpenExample">
           <div class="accordion-item p-2 bg-dark text-light">
             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
